=================================
Changes for Crate Admin Interface
=================================

Unreleased
==========

2017/03/28 1.2.2
================

 - Fixed issue where arrays in formatted objects were not displayed.

2017/03/27 1.2.1
================

 - Removed blog feed from side bar.

 - Increase base font size.

 - Fixed issue that caused tables to display a healthy status even though their
   partitions were in critical state

 - Added fallback to unformatted results if no column types are returned.

 - Display notification warning only when a new CrateDB version is released.

 - Added ``lineWrapping`` option to console Editor.

 - Fixed issue that cause the console text to appear on top of the settings tab.

 - Fixed load reading display when the readings were invalid (for example, on
   Windows).

2017/03/16 1.2.0
================

 - Added monitoring plugin for the Enterprise edition.

 - Added Lazy loading of the stylesheet and plugins depending on the enterprise
   settings.

 - Added buttons to collapse and expand all schemas in the tables view.

 - The console now expands vertically to show the whole query if its size is
   larger than the standard size of the console.

 - SQL console keywords are now CrateDB specific.

 - Improved formatted results of the ``geo_area`` datatype to include an
   external link to a visualisation of that ``geo_area``.

 - Keywords in the SQL console are capitalised.

2017/03/16 1.1.2
================

 - Added node number to the status bar.

 - Fixed issue that caused ``Cluster Offline`` message to not be displayed.

 - Fixed a console results issue that caused the results table not to be visible
   after horizontal scrolling.

 - Fixed styling issue that caused the last element in the side bar list to be
   hidden.

 - Fixed an issue that caused the notification date to be ``null`` in Safari.

2017/02/15 1.1.1
================

 - Fixed a console results issue that caused the results table not to be