@@ -4,6 +4,6 @@
   },
   "MONITORING": {
     "QUERIES_PER_SECOND": "Anfragen Pro Sekunde",
-    "QUERY_SPEED": "Abfragegeschwindigkeit"
+    "QUERY_SPEED": "Abfragegeschwindigkeit (ms)"
   }
 }
